Made player, modified camera

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cmake.sourceDirectory": "${workspaceFolder}/PSP",
     "files.associations": {
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "xiosbase": "cpp",
+        "vector": "cpp"
     }
 }
