--- a/PSP/Makefile
+++ b/PSP/Makefile
@@ -4,7 +4,7 @@ LIBS = -lstdc++ -lm
 #-lpng -lpspaudiolib -lpspaudio -lpspaudiocodec -lintraFont -lz  -lpspgum -lpspgu -lstdc++ -lpsprtc -lpspctrl -lm -lpspvfpu -lpspsdk -lpsppower -lpsphttp -lpspmath
 
 CFLAGS = 
-CXXFLAGS = $(CFLAGS) -std=c++14 -fno-rtti 
+CXXFLAGS = $(CFLAGS) -std=c++14 -fno-rtti -D_WIN32
 ASFLAGS = $(CFLAGS)
 
 #PSP Stuff
@@ -12,8 +12,9 @@ BUILD_PRX = 1
 PSP_FW_VERSION = 600
 PSP_LARGE_MEMORY = 1
 
+PSP_EBOOT_ICON = ICON0.png
 EXTRA_TARGETS = EBOOT.PBP
-PSP_EBOOT_TITLE = Our Craft
+PSP_EBOOT_TITLE = RocketMan
 
 PSPSDK=$(shell psp-config --pspsdk-path)
 include $(PSPSDK)/lib/build.mak
