--- a/src/Makefile
+++ b/src/Makefile
@@ -13,6 +13,7 @@ PSP_FW_VERSION = 600
 PSP_LARGE_MEMORY = 1
 
 PSP_EBOOT_ICON = ICON0.png
+PSP_EBOOT_PIC1 = PIC1.png
 EXTRA_TARGETS = EBOOT.PBP
 PSP_EBOOT_TITLE = RocketMan
 
