--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,10 @@
 TARGET = Tutorial
-OBJS = RocketMan.o gfx.o bmp/loadbmp.o utils.o logger/logger.o gamestate.o utils/object_handler.o utils/enemy_handler.o utils/projectile_handler.o utils/explosion_handler.o
+OBJS = RocketMan.o gfx.o bmp/loadbmp.o utils.o logger/logger.o gamestate.o utils/object_handler.o utils/enemy_handler.o utils/projectile_handler.o utils/animation_handler.o
 LIBS = -lstdc++ -lm 
 #-lpng -lpspaudiolib -lpspaudio -lpspaudiocodec -lintraFont -lz  -lpspgum -lpspgu -lstdc++ -lpsprtc -lpspctrl -lm -lpspvfpu -lpspsdk -lpsppower -lpsphttp -lpspmath
 
 CFLAGS = 
-CXXFLAGS = $(CFLAGS) -std=c++14 -fno-rtti -O3 -DPSP_LOGGING
+CXXFLAGS = $(CFLAGS) -std=c++14 -fno-rtti -O3 #-DPSP_LOGGING
 ASFLAGS = $(CFLAGS)
 
 #PSP Stuff
