Work on GUI library

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ OBJS = RocketMan.o \
 	object_handler/object_handler.o object_handler/enemy_handler.o \
 	object_handler/projectile_handler.o object_handler/animation_handler.o \
 	object_handler/global_object_manager.o object_handler/player_handler.o \
-	image_builder/text_builder.o image_builder/menu.o \
+	image_builder/text_builder.o image_builder/menu.o image_builder/component.o \
 	image/image.o image/animation.o \
 	object/object_list.o object/object.o \
 
