Moved game specific code to /game

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,17 +1,17 @@
 TARGET = Tutorial
 OBJS = RocketMan.o \
-	gamestate.o \
+	game/gamestate.o \
+	game/utils.o \
 	graphics/gfx.o \
 	bmp/loadbmp.o \
-	utils.o \
 	logger/logger.o \
 	utils/psp_malloc.o \
 	controls/control_reader.o \
 	physics/physics.o physics/collisions.o \
-	object_handler/object_handler.o object_handler/enemy_handler.o \
-	object_handler/projectile_handler.o object_handler/animation_handler.o \
-	object_handler/global_object_manager.o object_handler/player_handler.o \
-	object_handler/explosion_handler.o \
+	game/object_handler/object_handler.o game/object_handler/enemy_handler.o \
+	game/object_handler/projectile_handler.o game/object_handler/animation_handler.o \
+	game/object_handler/global_object_manager.o game/object_handler/player_handler.o \
+	game/object_handler/explosion_handler.o \
 	GUI/text_builder.o GUI/menu.o GUI/component.o \
 	GUI/interface/pause_menu.o \
 	image/image.o image/animation.o \
