--- a/src/Makefile
+++ b/src/Makefile
@@ -18,7 +18,7 @@ OBJS = RocketMan.o \
 	physics/physics.o physics/collisions.o physics/vector2d.o \
 	GUI/text_builder.o GUI/menu.o GUI/component.o \
 	game/interface/pause_menu.o \
-	image/image.o image/animation.o \
+	image/image.o image/animation.o image/image_utils.o \
 	object/object_list.o object/object.o \
 
 LIBS = -lstdc++ -lm 
