--- a/src/Makefile
+++ b/src/Makefile
@@ -31,7 +31,7 @@ CFLAGS =
 CXXFLAGS = $(CFLAGS) -std=c++14 -fno-rtti -O3 -Wall -Wextra -Wdouble-promotion \
 					-Wno-unused-parameter -Warray-bounds -Wcoverage-mismatch \
 					-Wparentheses -Wunused-const-variable -Wuseless-cast \
-					-Wunused -DPSP_LOGGING
+					-Wunused #-DPSP_LOGGING
 ASFLAGS = $(CFLAGS)
 
 #PSP Stuff
