--- a/src/Makefile
+++ b/src/Makefile
@@ -15,20 +15,22 @@ OBJS = RocketMan.o \
 	game/interface/on_screen.o \
 	game/interface/death_menu.o \
 	game/graphics/game_graphics.o \
-	graphics/gfx.o \
-	bmp/loadbmp.o \
-	logger/logger.o \
-	memory/psp_malloc.o \
-	controls/control_reader.o \
-	physics/physics.o physics/collisions.o physics/vector2d.o \
-	GUI/text_builder.o GUI/menu.o GUI/component.o \
-	image/image.o image/animation.o image/image_utils.o \
-	object/object_list.o object/object.o object/object_handler.o \
+	# graphics/gfx.o \
+	# bmp/loadbmp.o \
+	# logger/logger.o \
+	# memory/psp_malloc.o \
+	# controls/control_reader.o \
+	# physics/physics.o physics/collisions.o physics/vector2d.o \
+	# GUI/text_builder.o GUI/menu.o GUI/component.o \
+	# image/image.o image/animation.o image/image_utils.o \
+	# object/object_list.o object/object.o object/object_handler.o \
 
 LIBS = -lstdc++ -lm
 #-lpng -lpspaudiolib -lpspaudio -lpspaudiocodec -lintraFont -lz  -lpspgum
 #-lpspgu -lstdc++ -lpsprtc -lpspctrl -lm -lpspvfpu -lpspsdk -lpsppower -lpsphttp
 #-lpspmath
+
+INCDIR   := $(INCDIR) . $(ENGINE_PATH)
 
 CFLAGS =
 CXXFLAGS = $(CFLAGS) -std=c++14 -fno-rtti -O3 -Wall -Wextra -Wdouble-promotion \
@@ -41,7 +43,6 @@ ASFLAGS = $(CFLAGS)
 BUILD_PRX = 1
 PSP_FW_VERSION = 600
 PSP_LARGE_MEMORY = 1
-
 PSP_EBOOT_ICON = ICON0.png
 PSP_EBOOT_PIC1 = PIC1.png
 EXTRA_TARGETS = EBOOT.PBP
